# aula06_bootcamp

./: .gitignore  .pre-commit-config.yaml  main.py  main2.py  main3.py  pyproject.toml
