[project]
name = "aula06-bootcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "edson-github",email = "edson.maxiad@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry]
name = "nome-do-seu-projeto"
version = "0.1.0"
description = ""
authors = ["Seu Nome <email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
# Outras dependências aqui...

[tool.taskipy.tasks]
format = """
isort main.py
black main.py
flake8 main.py
"""



